# domain-rag-agent

./: .env.example  .gitignore  CLAUDE.md  Makefile  README-01-rag-agent.md  README.md  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  config.py  main.py  schemas.py
backend/app/agent/: __init__.py  prompts.py  tools.py
backend/app/eval/: metrics.py
backend/app/generation/: __init__.py  chat_client.py  prompts.py  service.py
backend/app/ingestion/: chunking.py  curated.py  loaders.py  models.py  pipeline.py
backend/app/retrieval/: bm25.py  dense.py  embeddings.py  hybrid.py  models.py  rerank.py  rrf.py  service.py  store.py
backend/app/workflow/: __init__.py  prompts.py  tools.py
backend/tests/: test_agent_tools.py  test_generation.py  test_german_law_ingestion.py  test_health.py  test_retrieval.py  test_workflow_tools.py
docs/: AI_HANDOFF.md  architecture.md  data-sources.md  decisions.md
eval/: example_queries.jsonl  golden_set.example.jsonl  golden_set.jsonl
eval/results/: latest.json  latest.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css
frontend/src/components/: AnswerPanel.tsx  ChunkCard.tsx  Controls.tsx  StatusBar.tsx
scripts/: build_chunks.py  build_index.py  compare_chunking.py  download_german_law.py  run_eval.py  run_example_queries.py
