[project]
name = "domain-rag-agent"
version = "0.1.0"
description = "GermanLawRAG: retrieval-augmented assistant for German legal texts."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "lxml>=5.2.0",
    "numpy>=1.26.4",
    "pydantic-settings>=2.4.0",
    "qdrant-client>=1.11.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.1",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.8",
    "ruff>=0.5.5",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["backend/app"]

[[tool.mypy.overrides]]
module = ["bs4.*", "qdrant_client.*", "rank_bm25.*"]
ignore_missing_imports = true
